--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#files for input and output
+C:\Users\Gestor\Desktop\Duepay\src\input
+C:\Users\Gestor\Desktop\Duepay\src\output
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
