Fix: Fixing the path in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #files for input and output
-C:\Users\Gestor\Desktop\Duepay\src\input/
-C:\Users\Gestor\Desktop\Duepay\src\output/
+src/input/
+src/output/
+
 
 
 
